[package]
name = "easy_proc_derive"
version = "0.3.0"
authors = ["Brett Etter <brett@staratlas.com>"]
edition = "2021"
description = "Derive macros for `easy_proc`"
documentation = "https://docs.rs/easy_proc_derive/latest/easy_proc_derive/"
repository = "https://github.com/Buzzec/easy_proc"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
easy_proc_common = { version = "0.3.0", path = "../common" }
proc-macro2 = "1.0.27"
syn = { version = "2.0.22", features = ["full", "extra-traits"] }
quote = "1.0.28"
sha2 = "0.10.7"
proc-macro-error = "1.0.4"
proc-macro-crate = "1.0.0"
heck = "0.4.0"
lazy_static = "1.4.0"

[dev-dependencies]
easy_proc = { path = ".." }
